make plagarism in prog exercises async